--- a/Examples/Blinky/Blinky.csolution.yml
+++ b/Examples/Blinky/Blinky.csolution.yml
@@ -1,14 +1,25 @@
 solution:
-  created-for: CMSIS-Toolbox@2.0.0
-
+  created-for: CMSIS-Toolbox@2.10.0
   cdefault:
 
+  select-compiler:
+    - compiler: AC6
+    - compiler: GCC
+    - compiler: IAR
+    - compiler: CLANG
+
   target-types:
-    - type: Simulator
+    - type: FVP
       device: ARMCM3
 
-  optimize: size
-  debug: on
+  build-types:
+    - type: Debug
+      debug: on
+      optimize: none
+
+    - type: Release
+      debug: off
+      optimize: balanced
 
   projects:
     - project: Blinky.cproject.yml
