--- a/Examples/MemPool/MemPool.cproject.yml
+++ b/Examples/MemPool/MemPool.cproject.yml
@@ -1,16 +1,17 @@
 project:
+
   packs:
-    - pack: ARM::Cortex_DFP@>=1.0.0-0
-    - pack: ARM::CMSIS@>=6.0.0-0
-    - pack: ARM::CMSIS-RTX@>=5.8.0-0
-    - pack: ARM::CMSIS-View@>=1.0.0-0
+    - pack: ARM::Cortex_DFP@^1.1.0-0
+    - pack: ARM::CMSIS@^6.0.0-0
+    - pack: ARM::CMSIS-RTX@^5.8.0-0
+    - pack: ARM::CMSIS-View@^1.0.0-0
 
   components:
-    - component: ARM::Device:Startup&C Startup
-    - component: ARM::CMSIS:CORE
-    - component: ARM::CMSIS:OS Tick:SysTick
-    - component: ARM::CMSIS:RTOS2:Keil RTX5&Source
-    - component: ARM::CMSIS-View:Event Recorder&Semihosting
+    - component: Device:Startup&C Startup
+    - component: CMSIS:CORE
+    - component: CMSIS:OS Tick:SysTick
+    - component: CMSIS:RTOS2:Keil RTX5&Source
+    - component: CMSIS-View:Event Recorder&Semihosting
 
   groups:
     - group: Documentation
