--- a/Examples/TrustZoneV8M/NoRTOS/CM33_s/CM33_s.cproject.yml
+++ b/Examples/TrustZoneV8M/NoRTOS/CM33_s/CM33_s.cproject.yml
@@ -4,12 +4,12 @@ project:
     trustzone: secure
 
   packs:
-    - pack: ARM::Cortex_DFP@>=1.0.0-0
-    - pack: ARM::CMSIS@>=6.0.0-0
+    - pack: ARM::Cortex_DFP@^1.0.0-0
+    - pack: ARM::CMSIS@^6.0.0-0
 
   components:
-    - component: ARM::Device:Startup&C Startup
-    - component: ARM::CMSIS:CORE
+    - component: Device:Startup&C Startup
+    - component: CMSIS:CORE
 
   groups:
     - group: Documentation
@@ -22,5 +22,7 @@ project:
       files:
         - file: interface.c
 
-  linker:
-    - script: RTE/Device/ARMCM33/ARMCM33_ac6.sct
+  output:
+    type:
+    - elf
+    - map
