--- a/Examples/TrustZoneV8M/RTOS_Faults/CM33_ns/CM33_ns.cproject.yml
+++ b/Examples/TrustZoneV8M/RTOS_Faults/CM33_ns/CM33_ns.cproject.yml
@@ -1,19 +1,23 @@
+# A project translates into one executable or library.
 project:
 
   processor:
     trustzone: non-secure
 
+  # List packs that define software components.
   packs:
-    - pack: ARM::Cortex_DFP@^1.0.0-0
     - pack: ARM::CMSIS@^6.0.0-0
     - pack: ARM::CMSIS-RTX@^5.8.0-0
 
+  # List components to use for your application.
+  # A software component is a re-usable unit that may be configurable.
   components:
     - component: Device:Startup&C Startup
     - component: CMSIS:CORE
     - component: CMSIS:OS Tick:SysTick
     - component: CMSIS:RTOS2:Keil RTX5&Source
 
+  # List files that are part of the project.
   groups:
     - group: Non-secure Code
       files:
@@ -22,7 +26,9 @@ project:
       files:
         - file: $cmse-lib(CM33_s)$
 
+  # List executable file formats to be generated.
   output:
     type:
     - elf
+    - hex
     - map
