Add CLANG, correct workflow

--- a/.github/workflows/Test-Examples.yml
+++ b/.github/workflows/Test-Examples.yml
@@ -73,7 +73,7 @@ jobs:
         working-directory: ./
         run: |
           mkdir -p ./.ci/${{ matrix.test.dir }}
-          cp -a ./${{ matrix.test.dir }} ./.ci/${{ matrix.test.dir }}
+          cp -a ./${{ matrix.test.dir }}/* ./.ci/${{ matrix.test.dir }}/
 
       - name: Build Example
         working-directory: ./.ci/${{ matrix.test.dir }}
