--- a/.ci/vcpkg-configuration.json
+++ b/.ci/vcpkg-configuration.json
@@ -12,6 +12,7 @@
   "arm:tools/ninja-build/ninja": "^1.12.1",
   "arm:compilers/arm/armclang": "^6.24.0",
   "arm:compilers/arm/arm-none-eabi-gcc": "^14.3.1",
-  "arm:compilers/iar/cxarm": "^9.70.2"
+  "arm:compilers/iar/cxarm": "^9.70.2",
+  "arm:compilers/arm/llvm-embedded": "^21.1.1"
  }
 }
