--- a/Examples/TrustZoneV8M/RTOS/CM33_s/CM33_s.cproject.yml
+++ b/Examples/TrustZoneV8M/RTOS/CM33_s/CM33_s.cproject.yml
@@ -27,6 +27,10 @@ project:
         - file: interface.c
         - file: tz_context.c
 
+  # List instructions for the linker.
+  linker:
+    - regions: ./RTE/Device/ARMCM33/regions_ARMCM33.h
+
   # List executable file formats to be generated.
   output:
     type:
