--- a/Examples/TrustZoneV8M/NoRTOS/CM33_s/CM33_s.cproject.yml
+++ b/Examples/TrustZoneV8M/NoRTOS/CM33_s/CM33_s.cproject.yml
@@ -26,6 +26,10 @@ project:
       files:
         - file: interface.c
 
+  # List instructions for the linker.
+  linker:
+    - regions: ./RTE/Device/ARMCM33/regions_ARMCM33.h
+
   # List executable file formats to be generated.
   output:
     type:
