--- a/.github/workflows/Test-Examples.yml
+++ b/.github/workflows/Test-Examples.yml
@@ -13,35 +13,35 @@ jobs:
     strategy:
       matrix:
         test: [
-          { tool: AC6,   dir: Examples/Blinky,    proj: Blinky,     artifact: Blinky, model: FVP_MPS2_Cortex-M3, out: Blinky },
-          { tool: GCC,   dir: Examples/Blinky,    proj: Blinky,     artifact: Blinky, model: FVP_MPS2_Cortex-M3, out: Blinky },
-          { tool: CLANG, dir: Examples/Blinky,    proj: Blinky,     artifact: Blinky, model: FVP_MPS2_Cortex-M3, out: Blinky },
-          { tool: IAR,   dir: Examples/Blinky,    proj: Blinky,     artifact: Blinky, model: FVP_MPS2_Cortex-M3, out: Blinky },
+          { tool: AC6,   dir: Examples/Blinky,    proj: Blinky,     artifact: Blinky, model: FVP_MPS2_Cortex-M3, out: Blinky, ext: axf },
+          { tool: GCC,   dir: Examples/Blinky,    proj: Blinky,     artifact: Blinky, model: FVP_MPS2_Cortex-M3, out: Blinky, ext: elf },
+          { tool: CLANG, dir: Examples/Blinky,    proj: Blinky,     artifact: Blinky, model: FVP_MPS2_Cortex-M3, out: Blinky, ext: elf },
+          { tool: IAR,   dir: Examples/Blinky,    proj: Blinky,     artifact: Blinky, model: FVP_MPS2_Cortex-M3, out: Blinky, ext: out },
 
-          { tool: AC6,   dir: Examples/MemPool,   proj: MemPool,    artifact: MemPool, model: FVP_MPS2_Cortex-M3, out: MemPool },
-          { tool: GCC,   dir: Examples/MemPool,   proj: MemPool,    artifact: MemPool, model: FVP_MPS2_Cortex-M3, out: MemPool },
-          { tool: CLANG, dir: Examples/MemPool,   proj: MemPool,    artifact: MemPool, model: FVP_MPS2_Cortex-M3, out: MemPool },
-          { tool: IAR,   dir: Examples/MemPool,   proj: MemPool,    artifact: MemPool, model: FVP_MPS2_Cortex-M3, out: MemPool },
+          { tool: AC6,   dir: Examples/MemPool,   proj: MemPool,    artifact: MemPool, model: FVP_MPS2_Cortex-M3, out: MemPool, ext: axf },
+          { tool: GCC,   dir: Examples/MemPool,   proj: MemPool,    artifact: MemPool, model: FVP_MPS2_Cortex-M3, out: MemPool, ext: elf },
+          { tool: CLANG, dir: Examples/MemPool,   proj: MemPool,    artifact: MemPool, model: FVP_MPS2_Cortex-M3, out: MemPool, ext: elf },
+          { tool: IAR,   dir: Examples/MemPool,   proj: MemPool,    artifact: MemPool, model: FVP_MPS2_Cortex-M3, out: MemPool, ext: out },
 
-          { tool: AC6,   dir: Examples/MsgQueue,  proj: MsgQueue,   artifact: MsgQueue, model: FVP_MPS2_Cortex-M3, out: MsgQueue },
-          { tool: GCC,   dir: Examples/MsgQueue,  proj: MsgQueue,   artifact: MsgQueue, model: FVP_MPS2_Cortex-M3, out: MsgQueue },
-          { tool: CLANG, dir: Examples/MsgQueue,  proj: MsgQueue,   artifact: MsgQueue, model: FVP_MPS2_Cortex-M3, out: MsgQueue },
-          { tool: IAR,   dir: Examples/MsgQueue,  proj: MsgQueue,   artifact: MsgQueue, model: FVP_MPS2_Cortex-M3, out: MsgQueue },
+          { tool: AC6,   dir: Examples/MsgQueue,  proj: MsgQueue,   artifact: MsgQueue, model: FVP_MPS2_Cortex-M3, out: MsgQueue, ext: axf },
+          { tool: GCC,   dir: Examples/MsgQueue,  proj: MsgQueue,   artifact: MsgQueue, model: FVP_MPS2_Cortex-M3, out: MsgQueue, ext: elf },
+          { tool: CLANG, dir: Examples/MsgQueue,  proj: MsgQueue,   artifact: MsgQueue, model: FVP_MPS2_Cortex-M3, out: MsgQueue, ext: elf },
+          { tool: IAR,   dir: Examples/MsgQueue,  proj: MsgQueue,   artifact: MsgQueue, model: FVP_MPS2_Cortex-M3, out: MsgQueue, ext: out },
 
-          { tool: AC6,   dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s },
-          { tool: GCC,   dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s },
-          { tool: CLANG, dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s },
-          { tool: IAR,   dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s },
+          { tool: AC6,   dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: axf },
+          { tool: GCC,   dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
+          { tool: CLANG, dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
+          { tool: IAR,   dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: out },
 
-          { tool: AC6,   dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s },
-          { tool: GCC,   dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s },
-          { tool: CLANG, dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s },
-          { tool: IAR,   dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s },
+          { tool: AC6,   dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: axf },
+          { tool: GCC,   dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
+          { tool: CLANG, dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
+          { tool: IAR,   dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: out },
 
-          { tool: AC6,   dir: Examples/TrustZoneV8M/RTOS_Faults,  proj: RTOS_Faults,  artifact: TrustZoneV8M_RTOS_Faults, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s },
-          { tool: GCC,   dir: Examples/TrustZoneV8M/RTOS_Faults,  proj: RTOS_Faults,  artifact: TrustZoneV8M_RTOS_Faults, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s },
-          { tool: CLANG, dir: Examples/TrustZoneV8M/RTOS_Faults,  proj: RTOS_Faults,  artifact: TrustZoneV8M_RTOS_Faults, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s },
-          { tool: IAR,   dir: Examples/TrustZoneV8M/RTOS_Faults,  proj: RTOS_Faults,  artifact: TrustZoneV8M_RTOS_Faults, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s },
+          { tool: AC6,   dir: Examples/TrustZoneV8M/RTOS_Faults,  proj: RTOS_Faults,  artifact: TrustZoneV8M_RTOS_Faults, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: axf },
+          { tool: GCC,   dir: Examples/TrustZoneV8M/RTOS_Faults,  proj: RTOS_Faults,  artifact: TrustZoneV8M_RTOS_Faults, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
+          { tool: CLANG, dir: Examples/TrustZoneV8M/RTOS_Faults,  proj: RTOS_Faults,  artifact: TrustZoneV8M_RTOS_Faults, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
+          { tool: IAR,   dir: Examples/TrustZoneV8M/RTOS_Faults,  proj: RTOS_Faults,  artifact: TrustZoneV8M_RTOS_Faults, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: out }
           ]
 
       fail-fast: false
@@ -86,10 +86,10 @@ jobs:
         run: |
           if [[ "${{ matrix.test.model }}" == *"FVP_MPS2_Cortex-M33"* ]]; then
             echo "Running TrustZoneV8M example with secure and non-secure binaries"
-            ${{ matrix.test.model }} -f ./fvp_config.txt -a ./out/${{ matrix.test.out_ns }}/FVP/Debug/${{ matrix.test.out_ns }}.axf -a ./out/${{ matrix.test.out_s }}/FVP/Debug/${{ matrix.test.out_s }}.axf --simlimit 10
+            ${{ matrix.test.model }} -f ./fvp_config.txt -a ./out/${{ matrix.test.out_ns }}/FVP/Debug/${{ matrix.test.out_ns }}.${{ matrix.test.ext }} -a ./out/${{ matrix.test.out_s }}/FVP/Debug/${{ matrix.test.out_s }}.${{ matrix.test.ext }} --simlimit 10
           else
             echo "Running standard example"
-            ${{ matrix.test.model }} -f ./fvp_config.txt -a ./out/${{ matrix.test.out }}/FVP/Debug/${{ matrix.test.out }}.axf --simlimit 10"
+            ${{ matrix.test.model }} -f ./fvp_config.txt -a ./out/${{ matrix.test.out }}/FVP/Debug/${{ matrix.test.out }}.${{ matrix.test.ext }} --simlimit 10
           fi
 
       - name: Upload Artifact
