--- a/.github/workflows/Test-Examples.yml
+++ b/.github/workflows/Test-Examples.yml
@@ -13,30 +13,30 @@ jobs:
     strategy:
       matrix:
         test: [
-          { tool: AC6,   dir: Examples/Blinky,    proj: Blinky,     artifact: Blinky, model: FVP_MPS2_Cortex-M3, out: Blinky, ext: axf },
-          { tool: GCC,   dir: Examples/Blinky,    proj: Blinky,     artifact: Blinky, model: FVP_MPS2_Cortex-M3, out: Blinky, ext: elf },
-          { tool: CLANG, dir: Examples/Blinky,    proj: Blinky,     artifact: Blinky, model: FVP_MPS2_Cortex-M3, out: Blinky, ext: elf },
-          { tool: IAR,   dir: Examples/Blinky,    proj: Blinky,     artifact: Blinky, model: FVP_MPS2_Cortex-M3, out: Blinky, ext: out },
+          { tool: AC6,   dir: Examples/Blinky,                    proj: Blinky,       artifact: Blinky,                   model: FVP_MPS2_Cortex-M3, out: Blinky, ext: axf },
+          { tool: GCC,   dir: Examples/Blinky,                    proj: Blinky,       artifact: Blinky,                   model: FVP_MPS2_Cortex-M3, out: Blinky, ext: elf },
+          { tool: CLANG, dir: Examples/Blinky,                    proj: Blinky,       artifact: Blinky,                   model: FVP_MPS2_Cortex-M3, out: Blinky, ext: elf },
+          { tool: IAR,   dir: Examples/Blinky,                    proj: Blinky,       artifact: Blinky,                   model: FVP_MPS2_Cortex-M3, out: Blinky, ext: out },
+                  
+          { tool: AC6,   dir: Examples/MemPool,                   proj: MemPool,      artifact: MemPool,                  model: FVP_MPS2_Cortex-M3, out: MemPool, ext: axf },
+          { tool: GCC,   dir: Examples/MemPool,                   proj: MemPool,      artifact: MemPool,                  model: FVP_MPS2_Cortex-M3, out: MemPool, ext: elf },
+          { tool: CLANG, dir: Examples/MemPool,                   proj: MemPool,      artifact: MemPool,                  model: FVP_MPS2_Cortex-M3, out: MemPool, ext: elf },
+          { tool: IAR,   dir: Examples/MemPool,                   proj: MemPool,      artifact: MemPool,                  model: FVP_MPS2_Cortex-M3, out: MemPool, ext: out },
+                                  
+          { tool: AC6,   dir: Examples/MsgQueue,                  proj: MsgQueue,     artifact: MsgQueue,                 model: FVP_MPS2_Cortex-M3, out: MsgQueue, ext: axf },
+          { tool: GCC,   dir: Examples/MsgQueue,                  proj: MsgQueue,     artifact: MsgQueue,                 model: FVP_MPS2_Cortex-M3, out: MsgQueue, ext: elf },
+          { tool: CLANG, dir: Examples/MsgQueue,                  proj: MsgQueue,     artifact: MsgQueue,                 model: FVP_MPS2_Cortex-M3, out: MsgQueue, ext: elf },
+          { tool: IAR,   dir: Examples/MsgQueue,                  proj: MsgQueue,     artifact: MsgQueue,                 model: FVP_MPS2_Cortex-M3, out: MsgQueue, ext: out },
 
-          { tool: AC6,   dir: Examples/MemPool,   proj: MemPool,    artifact: MemPool, model: FVP_MPS2_Cortex-M3, out: MemPool, ext: axf },
-          { tool: GCC,   dir: Examples/MemPool,   proj: MemPool,    artifact: MemPool, model: FVP_MPS2_Cortex-M3, out: MemPool, ext: elf },
-          { tool: CLANG, dir: Examples/MemPool,   proj: MemPool,    artifact: MemPool, model: FVP_MPS2_Cortex-M3, out: MemPool, ext: elf },
-          { tool: IAR,   dir: Examples/MemPool,   proj: MemPool,    artifact: MemPool, model: FVP_MPS2_Cortex-M3, out: MemPool, ext: out },
+          { tool: AC6,   dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS,      model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: axf },
+          { tool: GCC,   dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS,      model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
+          { tool: CLANG, dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS,      model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
+          { tool: IAR,   dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS,      model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: out },
 
-          { tool: AC6,   dir: Examples/MsgQueue,  proj: MsgQueue,   artifact: MsgQueue, model: FVP_MPS2_Cortex-M3, out: MsgQueue, ext: axf },
-          { tool: GCC,   dir: Examples/MsgQueue,  proj: MsgQueue,   artifact: MsgQueue, model: FVP_MPS2_Cortex-M3, out: MsgQueue, ext: elf },
-          { tool: CLANG, dir: Examples/MsgQueue,  proj: MsgQueue,   artifact: MsgQueue, model: FVP_MPS2_Cortex-M3, out: MsgQueue, ext: elf },
-          { tool: IAR,   dir: Examples/MsgQueue,  proj: MsgQueue,   artifact: MsgQueue, model: FVP_MPS2_Cortex-M3, out: MsgQueue, ext: out },
-
-          { tool: AC6,   dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: axf },
-          { tool: GCC,   dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
-          { tool: CLANG, dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
-          { tool: IAR,   dir: Examples/TrustZoneV8M/NoRTOS,       proj: NoRTOS,       artifact: TrustZoneV8M_NoRTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: out },
-
-          { tool: AC6,   dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: axf },
-          { tool: GCC,   dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
-          { tool: CLANG, dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
-          { tool: IAR,   dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: out },
+          { tool: AC6,   dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS,        model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: axf },
+          { tool: GCC,   dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS,        model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
+          { tool: CLANG, dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS,        model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
+          { tool: IAR,   dir: Examples/TrustZoneV8M/RTOS,         proj: RTOS,         artifact: TrustZoneV8M_RTOS,        model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: out },
 
           { tool: AC6,   dir: Examples/TrustZoneV8M/RTOS_Faults,  proj: RTOS_Faults,  artifact: TrustZoneV8M_RTOS_Faults, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: axf },
           { tool: GCC,   dir: Examples/TrustZoneV8M/RTOS_Faults,  proj: RTOS_Faults,  artifact: TrustZoneV8M_RTOS_Faults, model: FVP_MPS2_Cortex-M33, out_ns: CM33_ns, out_s: CM33_s, ext: elf },
@@ -75,13 +75,13 @@ jobs:
           mkdir -p ./.ci/${{ matrix.test.dir }}
           cp -a ./${{ matrix.test.dir }}/* ./.ci/${{ matrix.test.dir }}/
 
-      - name: Build Example
+      - name: Build example
         working-directory: ./.ci/${{ matrix.test.dir }}
         run: |
           cbuild ./${{ matrix.test.proj }}.csolution.yml --packs --toolchain ${{ matrix.test.tool }}
 
       # Conditionally execute based on whether it's a TrustZone example or not
-      - name: Execute Example
+      - name: Execute example
         working-directory: ./.ci/${{ matrix.test.dir }}
         run: |
           if [[ "${{ matrix.test.model }}" == *"FVP_MPS2_Cortex-M33"* ]]; then
@@ -92,7 +92,7 @@ jobs:
             ${{ matrix.test.model }} -f ./fvp_config.txt -a ./out/${{ matrix.test.out }}/FVP/Debug/${{ matrix.test.out }}.${{ matrix.test.ext }} --simlimit 10
           fi
 
-      - name: Upload Artifact
+      - name: Upload artifact
         if: always()
         uses: actions/upload-artifact@v4
         with:
